# archipelago

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
OLD/: Cargo.toml
OLD/src/: labor.rs
src/: assets.rs  components.rs  input.rs  island.rs  main.rs  resources.rs  ship.rs  world.rs
src/island/: mod.rs  spawn.rs
src/rendering/: camera.rs  island_ui.rs  mod.rs  selection.rs  ship_ui.rs
src/ship/: mod.rs  spawn.rs  utility.rs
src/simulation/: docking.rs  economy.rs  fleet.rs  friction.rs  integration_tests.rs  mod.rs  movement.rs  route_history.rs
src/ui/: hud.rs  inspector.rs  legend.rs  mod.rs
src/world/: docking.rs  hud.rs  island_ui.rs  ship_ui.rs  ui.rs  view_model.rs
