[package]
name = "archipelago"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
rstest = "0.26.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
